--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,20 @@ auto_video_study/chromedriver
 auto_video_study/chromedriver.exe
 auto_video_study/chrome-mac-arm64/
 auto_video_study/dist/
+AI/Diffusion_GAN/data/
+AI/diffusionGan/data/
+AI/diffusionGan/ir_images/
+AI/diffusionGan/output/
+AI/diffusionGan/visible_images/
+导出数据/
+/video_download/chrome-mac-arm64/
+/video_download/chromedrivers/
+/video_download/downloads/
+/chrome-ext/node_modules/
+/build/
+/dist/
+/scapers/example_spider/build/
+/scapers/example_spider/build/
+/scapers/example_spider/example_spider/build/
+/venv/
+/wechat/.wechaty/
